--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Trevor Behlman",
   "license": "MIT",
   "dependencies": {
-    "falafel-harmony": "^0.3.1",
+    "acorn": "^4.0.3",
     "jasmine": "^2.5.2"
   }
 }
