Expose shell utility via npm bin

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "acorn": "^4.0.3",
     "jasmine": "^2.5.2"
+  },
+  "bin": {
+	  "slim-cover": "./bin/cover-jasmine.js"
   }
 }
