--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author": "Trevor Behlman",
   "license": "MIT",
   "dependencies": {
-    "acorn": "^5.0.3",
-    "jasmine": "^2.5.2"
+    "acorn": "^5.0.3"
   },
   "bin": {
     "slim-cover": "./bin/slim-cover.js"
