Change cli, add exclusion option
The new command line interface is not backwards compatible and therefore
forces a major version increment next release, but it is far more
extensible and will enable more functionality down the line.

The old command line interface:

slim-cover [<project> [<include>]]

The new command line interface:

slim-cover [--project <project>] [--include <include>] [--exclude <exclude>]

You may specify as many includes and excludes as you like.  For example:

slim-cover --include src --include lib

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "acorn": "^6.0.2",
     "line-scanner": "tsbehlman/line-scanner",
+    "mri": "^1.1.1",
     "ring-buffer": "tsbehlman/ring-buffer",
     "transformer": "tsbehlman/transformer",
     "traveler": "tsbehlman/traveler"
