--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: node_js
 node_js:
   - "node"
+install:
+  - npm install -g codecov
+  - npm ci
+after_success:
+  - ./bin/slim-cover.js --reporter codecov > coverage.json
+  - codecov --file=codecov.json
