Add option to specify file to write report to
By default the report is written to stdout.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - npm ci
 after_success:
   - ./bin/slim-cover.js --reporter codecov > coverage.json
-  - codecov --file=codecov.json
+  - codecov --file=coverage.json
