--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jasmine",
-    "coverage": "./bin/slim-cover.js . src"
+    "coverage": "./bin/slim-cover.js --include src"
   },
   "dependencies": {
     "acorn": "^6.1.1",
